--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,56 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,100..900;1,62.5..100,100..900&family=Quicksand:wght@300..700&family=Space+Grotesk:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,100..900;1,62.5..100,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&family=Space+Grotesk:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap");
 @import "tailwindcss";
+
+body {
+  font-family:
+    "Poppins", "EB Garamond", "Chivo", "Quicksand", "Montserrat", "Open Sans",
+    sans-serif;
+}
+
+.hero-pic {
+  background:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)),
+    url("assets/macro-eye-iris.jpg") no-repeat center;
+  background-size: cover;
+}
+
+.loader {
+  width: 60px;
+  aspect-ratio: 2;
+  --_g: no-repeat radial-gradient(farthest-side, #000 90%, #0000);
+  background:
+    var(--_g) 0 50%,
+    var(--_g) 50% 50%,
+    var(--_g) 50% 50%,
+    var(--_g) 100% 50%;
+  background-size: 25% 50%;
+  animation: l12 1s infinite linear;
+}
+@keyframes l12 {
+  33% {
+    background-position:
+      0 0,
+      50% 100%,
+      50% 100%,
+      100% 0;
+  }
+  66% {
+    background-position:
+      50% 0,
+      0 100%,
+      100% 100%,
+      50% 0;
+  }
+  100% {
+    background-position:
+      50% 50%,
+      0 50%,
+      100% 50%,
+      50% 50%;
+  }
+}
