--- a/src/index.css
+++ b/src/index.css
@@ -8,49 +8,47 @@
 
 body {
   font-family:
-    "Poppins", "EB Garamond", "Chivo", "Quicksand", "Montserrat", "Open Sans",
+    "Quicksand", "Poppins", "EB Garamond", "Chivo", "Montserrat", "Open Sans",
     sans-serif;
 }
 
 .hero-pic {
   background:
-    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5)),
+    linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)),
     url("assets/macro-eye-iris.jpg") no-repeat center;
   background-size: cover;
 }
 
+/* HTML: <div class="loader"></div> */
 .loader {
-  width: 60px;
   aspect-ratio: 2;
-  --_g: no-repeat radial-gradient(farthest-side, #000 90%, #0000);
-  background:
-    var(--_g) 0 50%,
-    var(--_g) 50% 50%,
-    var(--_g) 50% 50%,
-    var(--_g) 100% 50%;
-  background-size: 25% 50%;
-  animation: l12 1s infinite linear;
+  border-bottom: 3px solid #0000;
+  background: linear-gradient(90deg, #524656 50%, #0000 0) -25% 100%/50% 3px
+    repeat-x border-box;
+  position: relative;
+  animation: l3-0 0.75s linear infinite;
 }
-@keyframes l12 {
-  33% {
-    background-position:
-      0 0,
-      50% 100%,
-      50% 100%,
-      100% 0;
+.loader:before {
+  content: "";
+  position: absolute;
+  inset: auto 42.5% 0;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #000;
+  animation: l3-1 0.75s cubic-bezier(0, 900, 1, 900) infinite;
+}
+@keyframes l3-0 {
+  to {
+    background-position: -125% 100%;
   }
-  66% {
-    background-position:
-      50% 0,
-      0 100%,
-      100% 100%,
-      50% 0;
+}
+@keyframes l3-1 {
+  0%,
+  2% {
+    bottom: 0%;
   }
-  100% {
-    background-position:
-      50% 50%,
-      0 50%,
-      100% 50%,
-      50% 50%;
+  98%,
+  to {
+    bottom: 0.1%;
   }
 }
