--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ body {
 
 .hero-pic {
   background:
-    linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.8)),
-    url("assets/macro-eye-iris.jpg") no-repeat center;
+    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)),
+    url("assets/IMG_9647.png") no-repeat center;
   background-size: cover;
 }
 
@@ -50,5 +50,15 @@ body {
   98%,
   to {
     bottom: 0.1%;
+  }
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 }
